--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^1.37.2",
     "cookie-parser": "^1.4.7",
     "cookieparser": "^0.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "joi": "^18.0.1",
